[package]
name = "cfst-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures-util = "0.3"
indicatif = "0.17"
ipnet = "2.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
